CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(UCLATCH)

FIND_PACKAGE(CUDA REQUIRED)
FIND_PACKAGE(OpenCV 3 REQUIRED)

FILE(GLOB 
  SRCS "UCLATCH.h")

INCLUDE(FindCUDA)

SET(CUDASRCS
    UCLATCH.cu
)

LIST(APPEND CMAKE_CXX_FLAGS "-std=c++11 -O3")
LIST(APPEND CMAKE_C_FLAGS "-std=c++11 -O3")
LIST(APPEND CUDA_NVCC_FLAGS "-D_MWAITXINTRIN_H_INCLUDED -lineinfo -Xptxas -v -Xcompiler -fopenmp -use_fast_math -O3 -gencode arch=compute_30,code=sm_30 -gencode arch=compute_60,code=sm_60 --default-stream per-thread -std=c++11")
MESSAGE("CUDA_NVCC_FLAGS: ${CUDA_NVCC_FLAGS}")

SET(CUDA_PROPAGATE_HOST_FLAGS OFF)

CUDA_ADD_LIBRARY(UCLATCH ${CUDASRCS} ${SRCS} SHARED)

INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})

FILE(GLOB
    TESTSRCS "main.cpp")

CUDA_ADD_EXECUTABLE(UCLATCH_TEST ${TESTSRCS} ${CUDASRCS} ${SRCS})

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(UCLATCH_TEST ${OpenCV_LIBS})
